src/App.css
html,
body {
  margin: 0;
  font-family: Quicksand, sans-serif, system-ui, -apple-system,
    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
    "Open Sans", "Helvetica Neue", sans-serif;
}
:root {
  --night: #0b090a;
  --eerie-black: #161a1d;
  --blood-red: #660708;
  --cornell-red: #a4161a;
  --cornell-red-2: #ba181b;
  --imperial-red: #e5383b;
  --silver: #b1a7a6;
  --timberwolf: #d3d3d3;
  --white-smoke: #f5f3f4;
  --white: #ffffff;
}

.prueba{
  display: flex;
  justify-content: left;
  align-items: center;
}


.boton {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: 10px;
}


.div-teachers {
  background-color: rgb(63, 60, 60);
  color: #c44949;
  display: flex;
  flex-direction: column;
}

.div-teachers h1 {
  margin: 24px;
}

.div-teachers p {
  color: black;
  display: flex;
}

.teacher-h1 {
  padding-bottom: 15px;
  font-size: 3em;
  border-bottom: 1px solid #f4f4f4;
}

.div-header p {
  color: white;
  font-size: 24px;
  text-align: justify;
  margin: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
  
}

/* COMPONENTE CLASES --------------------------------------------*/







.card2 img {
  width: 100%;
  height: 100%;
  object-fit: fill;
}



.buttons-container {
  margin-top: 20px;
}

.explore-button,
.signup-button {
  padding: 10px 20px;
  margin: 0 10px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

.explore-button {
  background-color: white;
  color: black;
  font-weight: 600;
  border: 1px solid black;
}

.signup-button {
  background-color: #f9f9f9;
  color: black;
  border: 1px solid black;
  font-weight: 600;
}

